# LibKsUtils

./: .gitignore  README.md
KsUtils/: CMakeLists.txt  ksutils.hpp
KsUtils/src/BasicDataStructures/: OrderedSet.hpp  TwoTypeArray.hpp
KsUtils/src/Compilator/: CompilatorBase.cpp  CompilatorBase.hpp  CompilatorStrings.hpp  CompilatorValueTypes.hpp  Enums.hpp  HashMapsBase.hpp  SimpleCompilator.hpp
KsUtils/src/Console/: Console.cpp  Console.hpp  MessPrinter.hpp  MessScanner.hpp
KsUtils/src/File/: BinFile.cpp  BinFile.hpp  CppFile.hpp  MyFile.hpp  OrderFileBase.hpp  TextFile.hpp
KsUtils/src/System/: HybridApp.hpp  IApp.hpp  MyGuid.hpp  MySystem.hpp  Platform.hpp  Win32GuidStruct.hpp
KsUtils/src/System/GuidUtils/: CrossGuidStruct.hpp  MyGuidStruct.hpp
KsUtils/src/Utils/: AppConstants.hpp  BitsetUtils.hpp  CppWriter.hpp  Formats.hpp  Globals.hpp  Misc.hpp  StringUtils.hpp  TxtUtils.hpp
